atualizações para o portifolio index -> btn zerar style -> btn zerar + btn enviar main -> aviso de peso e altura invertido arrumado

--- a/index.html
+++ b/index.html
@@ -54,12 +54,18 @@
             <input type="text" name="peso" id="peso">
             <label for="altura">Altura:</label>
             <input type="text" name="altura" id="altura">
-            <button>Calcular</button>                
+            <div class="btn-div">
+                <input type="button" value="Zerar" class="btn" onClick="window.location.reload()">                
+                <button class="btn" >Calcular</button>                
+            </div>
         </form>
         <div class="result">
 
         </div>
     </section>
+    <footer>
+        <p>&copy; GRB</p>
+    </footer>
     <script src="./assets/js/main.js"></script>
 </body>
 
